--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coffee-script": "1.7.1",
     "gulp": "3.6.2",
     "gulp-coffee": "1.4.3",
-    "gulp-notify": "1.3.0"
+    "gulp-notify": "1.3.0",
+    "nw-shortcuts": "mupat/nw-shortcuts"
   },
   "engines": {
     "node": ">= 0.11"
@@ -33,5 +34,6 @@
     "min_height": 300,
     "width": 800,
     "height": 500
-  }
+  },
+  "inject-js-end": "node_modules/nw-shortcuts/shortcuts.js"
 }
