--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "gherkin-editor",
   "private": true,
   "dependencies": {
-    "angular": "1.2.16"
+    "angular": "1.2.16",
+    "angular-sanitize": "1.2.16"
   }
 }
